--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,9 +16,11 @@ android {
     }
 
     buildTypes {
+
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "URL", "\"https://verdant-violet.glitch.me/\"")
+            resValue("string", "app_name", "LoftMoney-release")
+
         }
     }
     compileOptions {
