--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,17 +17,35 @@ android {
 
     buildTypes {
 
-        release {
-            buildConfigField("String", "URL", "\"https://verdant-violet.glitch.me/\"")
-            resValue("string", "app_name", "LoftMoney-release")
+        debug {
+           // buildConfigField("String", "URL", "\"https://verdant-violet.glitch.me/\"")
+            resValue("string", "app_name", "LoftMoney-Debug")
+        }
 
+        release {
+
+            //buildConfigField("String", "URL", "\"https://verdant-violet.glitch.me/\"")
+            resValue("string", "app_name", "LoftMoney-Release")
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-}
+
+    flavorDimensions 'target'
+    productFlavors {
+
+        alpha {
+            dimension 'target'
+            resValue("color", "colorPrimary", "#3574fa")
+        }
+
+        beta {
+            resValue("color", "colorPrimary", "#FFC107")
+        }
 
 dependencies {
 
@@ -62,4 +80,4 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-}
+}}}
